# VK-Music-Discord-RPC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  VkMusic_DiscordRPC.sln  compile.bat
VkMusic_DiscordRPC/: VkMusic_DiscordRPC.vcxproj  VkMusic_DiscordRPC.vcxproj.filters
include/: CURLClient.h  DRPC.h
lib/: libcurl_a.lib
src/: CMakeLists.txt  CURLClient.cpp  DRPC.cpp  DRPC.h  main.cpp
src/curlclient/: CMakeLists.txt
src/curlclient/include/: CURLClient.h
src/curlclient/source/: CURLClient.cpp
src/drpc/: CMakeLists.txt
src/drpc/include/: DRPC.h
